<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view_poster"
            android:layout_width="185dp"
            android:layout_height="185dp"
            android:src="@drawable/no_poster_movie"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_hint"
                android:textColor="@android:color/black"
                android:textSize="35sp"/>
            <TextView
                android:id="@+id/text_view_vote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/rating_hint" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_string"
                android:textSize="25sp"
                android:textStyle="italic"/>
        </LinearLayout>
    </LinearLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp">
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:gravity="center_vertical"
                   android:text="@string/overview_string"
                   android:textColor="#595458"
                   android:textSize="30sp"
                   android:textStyle="italic" />

               <TextView
                   android:id="@+id/text_view_overview"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"
                   android:textStyle="italic"
                   android:textColor="@android:color/darker_gray"
                   android:text="@string/text_overview"/>
           </LinearLayout>
        </ScrollView>
</LinearLayout>